--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -14,7 +14,7 @@ html {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
-/* 
+
 .grid {
     width: 1200px;
     max-width: 100%;
@@ -28,4 +28,4 @@ html {
 .grid__row {
     display: flex;
     flex-wrap: wrap;
-} */
+}
