--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@
 .header__navbar-item {
     margin: 0 8px;
     position: relative;
+    min-height: 26px;
 }
 
 .header__navbar-item,
@@ -30,8 +31,16 @@
     font-weight: 300;
 }
 
+.header__navbar-item,
+.header__navbar-item-link,
+.header__navbar-icon-link {
+    display: inline-flex;
+    align-items: center;
+}
+
 /* Các thay đổi khi đưa chuột tới những thẻ có class sau  */
 .header__navbar-item:hover,
+.header__navbar-icon-link:hover,
 .header__navbar-item-link:hover {
     /* Tự đổi con trỏ chuột thành hình bàn tay khi rê chuột tới */
     cursor: pointer;
@@ -60,4 +69,14 @@
     color: var(--white-color);
     /* Bỏ gạch chân icon */
     text-decoration: none;
+}
+
+.header__navbar-icon {
+    font-size: 1.8rem;
+    margin: 0 4px;
+}
+
+.header__navbar-title--no-pointer {
+    cursor: text;
+    color: var(--white-color);
 }
