--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -15,6 +15,14 @@ html {
     box-sizing: border-box;
 }
 
+.app {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
 .grid {
     width: 1800px;
     max-width: 100%;
@@ -37,4 +45,30 @@ html {
     } to {
         opacity: 1;
     }
+}
+
+/* MODAL */
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    display: flex;
+}
+
+/* Tạo nền có màu tối khi show ra modal đăng ký và đăng nhập */
+.modal__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal__body {
+    background-color: var(--white-color);
+    margin: auto;
+    position: relative;
+    z-index: 1;
+    border-radius: 5px;
 }
