--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,7 +1,9 @@
 :root {
+    --primay-color: #EE4D2D;
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;
+    --border-color: #dbdbdb;
 }
 
 * {
@@ -71,4 +73,19 @@ html {
     position: relative;
     z-index: 1;
     border-radius: 5px;
+}
+
+/* Button style */
+.btn {
+    min-width: 142px;
+    height: 36px;
+    text-decoration: none;
+    border: none;
+    border-radius: 2px;
+    font-size: 1.4rem;
+}
+
+.btn.btn--primary {
+    color: var(--white-color);
+    background-color: var(--primay-color);
 }
