--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -68,24 +68,43 @@ html {
 }
 
 .modal__body {
-    background-color: var(--white-color);
     margin: auto;
     position: relative;
     z-index: 1;
-    border-radius: 5px;
 }
 
 /* Button style */
 .btn {
     min-width: 142px;
-    height: 36px;
+    height: 34px;
     text-decoration: none;
     border: none;
     border-radius: 2px;
     font-size: 1.4rem;
+    outline: none;
+    cursor: pointer;
+    color: var(--text-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn.btn--normal:hover {
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
 .btn.btn--primary {
     color: var(--white-color);
     background-color: var(--primay-color);
+}
+
+.btn.btn--disabled {
+    color: #949494;
+    cursor: default;
+    background-color: #c3c3c3;
+}
+
+.btn.btn--size-s {
+    height: 30px;
+    padding-left: 12px;
 }
