--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,7 +132,10 @@
 
 /* Authen modal */
 .auth-form {
+    background-color: var(--white-color);
     width: 500px;
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 .auth-form__container {
@@ -194,5 +197,42 @@
 }
 
 .auth-form__controls {
+    display: flex;
+    justify-content: flex-end;
     margin-top: 80px;
+}
+
+.auth-form__controls-back {
+    margin-right: 8px;
+}
+
+.auth-form__socials {
+    background-color: #F5F5F5;
+    padding: 16px 36px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 24px;
+}
+
+.auth-form__socials-icon {
+    font-size: 1.8rem;
+}
+
+.auth-form__socials--facebook {
+    color: var(--white-color);
+    background-color: #3A5A98;
+}
+
+.auth-form__socials--facebook
+.auth-form__socials-icon {
+    color: var(--white-color);
+}
+
+.auth-form__socials--google {
+    color: #666;
+    background-color: var(--white-color);
+}
+
+.auth-form__socials-title {
+    margin: 0 20px;
 }
