html css form login

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,6 +146,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 12px;
+    margin-top: 10px;
 }
 
 .auth-form__heading {
@@ -235,4 +237,27 @@
 
 .auth-form__socials-title {
     margin: 0 20px;
+}
+
+.auth-form_help {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.auth-form_help-link {
+    font-size: 1.4rem;
+    text-decoration: none;
+    color: #939393;
+    margin: 3px 0;
+}
+
+.auth-form_help-separate {
+    display: block;
+    height: 22px;
+    margin: 0 16px;
+    border-left: 1px solid #EAEAEA;
+}
+
+.auth-form_help-forgot {
+    color: var(--primay-color);
 }
