--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -49,6 +49,14 @@ html {
     }
 }
 
+@keyframes growth {
+    from {
+        transform: scale(var(--growth-from));
+    } to {
+        transform: scale(var(--growth-to));
+    }
+}
+
 /* MODAL */
 .modal {
     position: fixed;
@@ -57,6 +65,7 @@ html {
     left: 0;
     bottom: 0;
     display: flex;
+    animation: fadeIn linear 0.2s;
 }
 
 /* Tạo nền có màu tối khi show ra modal đăng ký và đăng nhập */
@@ -68,9 +77,12 @@ html {
 }
 
 .modal__body {
+    --growth-from: 0.7;
+    --growth-to: 1;
     margin: auto;
     position: relative;
     z-index: 1;
+    animation: growth linear 0.2s;
 }
 
 /* Button style */
