--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -265,6 +265,8 @@
 /* Header With Search */
 .header-with-search {
     height: var(--header-with-search-height);
+    display: flex;
+    align-items: center;
 }
 
 .header__logo {
@@ -273,4 +275,21 @@
 
 .header__logo-img {
     width: 150px;
+}
+
+.header__search {
+    background-color: var(--white-color);
+    height: 40px;
+    flex: 1;
+    border-radius: 2px;
+}
+
+.header__cart {
+    width: 150px;
+    text-align: center;
+}
+
+.header__cart-icon {
+    color: var(--white-color);
+    font-size: 2.4rem;
 }
