--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -282,6 +282,19 @@
     height: 40px;
     flex: 1;
     border-radius: 2px;
+    display: flex;
+    align-items: center;
+}
+
+.header__search-input {
+    flex: 1;
+    height: 100%;
+    border: none;
+    outline: none;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    padding: 0 16px;
+    border-radius: 3px;
 }
 
 .header__cart {
@@ -292,4 +305,22 @@
 .header__cart-icon {
     color: var(--white-color);
     font-size: 2.4rem;
+}
+
+.header__search-select {
+    border-left: 1px solid #E8E8E8;
+    padding-left: 16px;
+}
+
+.header__search-select-label {
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+
+.header__search-select-icon {
+    font-size: 1.4rem;
+    color: rgba(131, 131, 131);
+    margin: 0 16px 0 8px;
+    position: relative;
+    top: 1px;
 }
