--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -324,3 +324,18 @@
     position: relative;
     top: 1px;
 }
+
+.header__search-btn {
+    background-color: var(--primay-color);
+    border: none;
+    height: 34px;
+    width: 60px;
+    border-radius: 3px;
+    margin-right: 3px;
+    outline: none;
+}
+
+.header__search-btn-icon {
+    font-size: 1.4rem;
+    color: var(--white-color);
+}
