header search css ss3

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -335,6 +335,11 @@
     outline: none;
 }
 
+.header__search-btn:hover {
+    cursor: pointer;
+    background-color: #fb6445;
+}
+
 .header__search-btn-icon {
     font-size: 1.4rem;
     color: var(--white-color);
