--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -424,5 +424,39 @@
     width: calc(100% - 16px);
     background-color: var(--white-color);
     border-radius: 3px;
-    box-shadow: 0 1px 3px #666;
+    box-shadow: 0 1px 5px rgb(189, 189, 189);
+}
+
+.header__search-history-heading {
+    margin: 6px 12px;
+    font-size: 1.4rem;
+    color: #999;
+    font-weight: 400;
+}
+
+.header__search-history-list {
+    padding-left: 0;
+    list-style: none;
+    margin: 6px 0 0;
+}
+
+.header__search-history-item {
+    height: 38px;
+    padding: 0 12px;
+}
+
+.header__search-history-item:last-child {
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+.header__search-history-item:hover {
+    background-color: #fafafa;
+}
+
+.header__search-history-item a {
+    text-decoration: none;
+    font-size: 1.4rem;
+    line-height: 38px;
+    color: var(--text-color);
 }
